# wintry

./: .gitignore  404.html  LICENSE  Makefile  Pipfile  README.md  conf.py  docker-compose.yaml  entry.py  gubbins.py  index.html  index.rst  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: docs-publish.yml  python-publish.yml  tests.yml
docs/: index.md  quickstart.md
docs/stylesheets/: custom.css  extra.css
docs/user-guide/: controllers.md
quickstart/: index.html
scripts/: rs-init.sh
search/: search_index.json
stylesheets/: custom.css  termynal.css
test_app/: app.py  main.py  settings.json  settings.py
test_app/controllers/: hero_crud.py
test_app/models/: hero.py
test_app/repositories/: hero_repository.py
test_app/services/: unit_of_work.py
test_app/views/: __init__.py
tests/: conftest.py  test_autotable_metadata_for_sql.py  test_cli_generate_model_command.py  test_crud_repository.py  test_dataclass_models_compatibility.py  test_dependency_injection_system.py  test_error_handling_at_repo_level.py  test_for_pikachu_event_dispatcher.py  test_igloo_container.py  test_message_queue_system.py  test_models_query_dsl.py  test_models_serializatio_and_deserialization.py  test_mongo_driver.py  test_multi_repo_implementation.py  test_no_sql_orm.py  test_parsing.py  test_pg_driver.py  test_pg_driver_against_db.py  test_redis_events_handler.py  test_repository_against_db.py  test_sql_orm.py  test_transactional_functions.py  test_unit_of_work_with_mongo.py  test_unit_of_work_with_pg.py
tuto/: commands.py  config.py  consumer.py  controllers.py  events.py  models.py  publisher.py  repositories.py  services.py  settings.py  uow.py  viewmodels.py  views.py
user-guide/autodiscovery/: index.html
user-guide/controllers/: index.html
user-guide/di/: index.html
user-guide/eventshandlers/: index.html
user-guide/installation/: index.html
user-guide/middlewares/: index.html
user-guide/models/: index.html
user-guide/repository/: index.html
user-guide/settings/: index.html
user-guide/unitofwork/: index.html
winter/: __init__.py  backend.py  controllers.py  dependency_injection.py  drivers.py  garbage.py  models.py  orm.py  responses.py  services.py  sessions.py  settings.py  unit_of_work.py
winter/drivers/: mongo.py  pg.py
winter/errors/: definitions.py  handlers.py
winter/mqs/: __init__.py  events_queue.py  message_queue_system.py
winter/query/: parsing.py
winter/repository/: __init__.py  base.py  crud_repository.py
winter/transactions/: __init__.py  unit_of_work.py
winter/utils/: keys.py  loaders.py
wintry/: __init__.py  backend.py  controllers.py  dependency_injection.py  entrypoints.py  generators.py  middlewares.py  models.py  orm.py  services.py  sessions.py  settings.py  sql.py
wintry/cli/: cli.py
wintry/cli/templates/project/{{cookiecutter.project_name}}/: .gitignore  config.py  pyproject.toml
wintry/cli/templates/project/{{cookiecutter.project_name}}/apps/: config.py
wintry/cli/templates/project/{{cookiecutter.project_name}}/apps/contrib/: dependencies.py  services.py
wintry/cli/templates/project/{{cookiecutter.project_name}}/apps/{{cookiecutter.project_name}}/inputs/: commands.py  events.py
wintry/cli/templates/project/{{cookiecutter.project_name}}/apps/{{cookiecutter.project_name}}/views/: viewmodels.py  viewservices.py
wintry/db_contexts/: __init__.py  context.py  (+1 more)
(+43 files in other folders)
