[tool.poetry]
name = "wintry"
version = "0.1.2"
description = "A modern python web framework. Based on python-3.10, dataclasses and type-hints"
authors = ["adriangs1996 <adriangonzalezsanchez1996@gmail.com>"]
license = "MIT"
readme="README.md"
keywords=[
    "orm", 
    "web-framework", 
    "api-rest", 
    "repository", 
    "wintry", 
]

repository="https://github.com/adriangs1996/wintry"
homepage="https://adriangs1996.github.io/wintry"

[tool.poetry.dependencies]
python = "^3.10"
motor = "^2.5.1"
SQLAlchemy = "^1.4.35"
asyncpg = "^0.25.0"
dataclass-wizard = "^0.22.0"
pydantic = "1.9.0"
aioredis = {version = "^2.0.1", optional = true }
fastapi = "^0.78.0"
aio-pika = "^7.2.0"
typer = {extras = ["all"], version = "^0.4.1"}
cookiecutter = "^1.7.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
mongomock = "^4.0.0"

[tool.poetry.extras]
redis = ["aioredis"]

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
