[tool.poetry]
name = "wintry"
version = "1.0.0"
description = "Fastapi with steroids"
authors = ["adriangs1996 <adriangonzalezsanchez1996@gmail.com>"]
license = "MIT"
readme="README.md"
keywords=[
    "web-framework",
    "api-rest", 
    "wintry",
    "fastapi"
]

repository="https://github.com/adriangs1996/wintry"
homepage="https://adriangs1996.github.io/wintry"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
typer = {extras = ["all"], version = "^0.4.1"}
cookiecutter = "^1.7.3"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
wrapt = "^1.14.1"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.1"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90

[tool.poetry.scripts]
snowman = "wintry.cli.cli:snowman"