[project]
name = "wintry"
version = "1.0.0"
requires-python = ">=3.11"
description = "Fastapi with steroids"
authors = ["adriangs1996 <adriangonzalezsanchez1996@gmail.com>"]
license = "MIT"
readme="README.md"
keywords=[
    "web-framework",
    "api-rest", 
    "wintry",
    "fastapi"
]

repository="https://github.com/adriangs1996/wintry"
homepage="https://adriangs1996.github.io/wintry"

dependencies = [
    "fastapi[standard]>=0.115.6",
    "typer>=0.15.1",
    "redis>=4.3.4"
]

[dependency-groups]
dev = [
    "alembic>=1.14.0",
    "pytest-watcher>=0.4.3",
    "pytest>=8.3.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.7.0",
    "faker>=33.1.0",
    "ipython>=8.31.0",
    "invoke>=2.2.0",
]

[tool.black]
line-length = 90
