[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
wintry = {extras = ["redis"], version = "^0.1.3"}
passlib = "^1.7.4"
python-jose = "^3.3.0"
pydantic = {extras = ["email"], version = "1.9.0"}
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[tool.black]
line-length = 90

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"